--- a/static/stat661/project_stat661.Rmd
+++ b/static/stat661/project_stat661.Rmd
@@ -478,7 +478,7 @@ EM_full<- THETA[max(THETA[,1],na.rm =T),]
 ## EM Method removing 150c data
 
 ```{r,echo=F}
-rm(list=ls())
+# rm(list=ls())
 I_c<-c(8:10,16:20,26:30)
 I_u<-c(1:7,11:15,21:25)
 temp <- c(170,190,220) 
